[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/shader/interface/split.tres" type="Shader" id=1]
[ext_resource path="res://assets/font/oxanium/bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://main/game/interface/button.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/texture/interface/icon/friends.png" type="Texture" id=4]
[ext_resource path="res://main/game/interface/interface.gd" type="Script" id=5]
[ext_resource path="res://assets/texture/interface/icon/menu.png" type="Texture" id=6]
[ext_resource path="res://assets/texture/interface/icon/pause.png" type="Texture" id=7]
[ext_resource path="res://assets/texture/interface/icon/left.png" type="Texture" id=8]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 1 )
shader_param/angle = 0.1
shader_param/offset = 0.65
shader_param/border_width = 0.01
shader_param/background = Color( 0.0509804, 0.0509804, 0.0509804, 1 )
shader_param/border = Color( 0.101961, 0.101961, 0.101961, 1 )
shader_param/flip = false

[sub_resource type="DynamicFont" id=2]
size = 144
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:anchor_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:anchor_right")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.5 ]
}

[sub_resource type="Animation" id=4]
resource_name = "main"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:anchor_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.5, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:anchor_right")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.5, 1.0 ]
}

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 1 )
shader_param/angle = 0.1
shader_param/offset = 0.65
shader_param/border_width = 0.01
shader_param/background = Color( 0.0509804, 0.0509804, 0.0509804, 1 )
shader_param/border = Color( 0.101961, 0.101961, 0.101961, 1 )
shader_param/flip = true

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:anchor_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -0.5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:anchor_right")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.5 ]
}

[sub_resource type="Animation" id=7]
resource_name = "main"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:anchor_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -0.5, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:anchor_right")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.5, 1.0 ]
}

[node name="interface" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="pause" type="ColorRect" parent="."]
material = SubResource( 1 )
anchor_left = 0.5
anchor_right = 1.5
anchor_bottom = 1.0

[node name="icon" type="TextureRect" parent="pause"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -244.0
margin_top = 64.0
margin_right = -64.0
margin_bottom = 244.0
texture = ExtResource( 7 )
expand = true

[node name="title" type="Label" parent="pause"]
anchor_right = 1.0
margin_top = 64.0
margin_right = -232.0
margin_bottom = 244.0
custom_fonts/font = SubResource( 2 )
text = "PAUSED"
align = 2
valign = 1

[node name="align" type="HBoxContainer" parent="pause"]
anchor_left = 0.66
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 320.0
margin_right = -64.0
margin_bottom = -64.0
alignment = 2

[node name="top_bottom" type="VBoxContainer" parent="pause/align"]
margin_right = 1328.0
margin_bottom = 2016.0
size_flags_horizontal = 3

[node name="top" type="VBoxContainer" parent="pause/align/top_bottom"]
margin_right = 1328.0
margin_bottom = 1901.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 32

[node name="back" parent="pause/align/top_bottom/top" instance=ExtResource( 3 )]
margin_top = 0.0
margin_right = 1328.0
margin_bottom = 111.0
text = "Back To Game"
icon = ExtResource( 8 )

[node name="invite" parent="pause/align/top_bottom/top" instance=ExtResource( 3 )]
margin_top = 143.0
margin_right = 1328.0
margin_bottom = 254.0
text = "Invite Friends"
icon = ExtResource( 4 )

[node name="bottom" type="VBoxContainer" parent="pause/align/top_bottom"]
margin_top = 1905.0
margin_right = 1328.0
margin_bottom = 2016.0
size_flags_horizontal = 3
custom_constants/separation = 32
alignment = 2

[node name="menu" parent="pause/align/top_bottom/bottom" instance=ExtResource( 3 )]
margin_top = 0.0
margin_right = 1328.0
margin_bottom = 111.0
text = "Exit To Menu"
icon = ExtResource( 6 )

[node name="toggle" type="AnimationPlayer" parent="pause"]
autoplay = "main"
anims/RESET = SubResource( 5 )
anims/main = SubResource( 4 )

[node name="invite" type="ColorRect" parent="."]
material = SubResource( 3 )
anchor_left = -0.5
anchor_right = 0.5
anchor_bottom = 1.0

[node name="icon" type="TextureRect" parent="invite"]
margin_left = 64.0
margin_top = 64.0
margin_right = 244.0
margin_bottom = 244.0
texture = ExtResource( 4 )
expand = true

[node name="title" type="Label" parent="invite"]
anchor_right = 1.0
margin_left = 232.0
margin_top = 64.0
margin_bottom = 244.0
custom_fonts/font = SubResource( 2 )
text = "INVITE"
valign = 1

[node name="align" type="HBoxContainer" parent="invite"]
anchor_right = 0.34
anchor_bottom = 1.0
margin_left = 64.0
margin_top = 320.0
margin_bottom = -64.0
alignment = 2

[node name="top_bottom" type="VBoxContainer" parent="invite/align"]
margin_right = 1328.0
margin_bottom = 2016.0
size_flags_horizontal = 3

[node name="top" type="ScrollContainer" parent="invite/align/top_bottom"]
margin_right = 1328.0
margin_bottom = 1833.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="vertical" type="VBoxContainer" parent="invite/align/top_bottom/top"]
margin_right = 1328.0
size_flags_horizontal = 3
custom_constants/separation = 16

[node name="spacer" type="Control" parent="invite/align/top_bottom"]
margin_top = 1837.0
margin_right = 1328.0
margin_bottom = 1901.0
rect_min_size = Vector2( 0, 64 )

[node name="back" parent="invite/align/top_bottom" instance=ExtResource( 3 )]
margin_top = 1905.0
margin_right = 1328.0
margin_bottom = 2016.0
text = "Back"
icon = ExtResource( 8 )

[node name="toggle" type="AnimationPlayer" parent="invite"]
anims/RESET = SubResource( 6 )
anims/main = SubResource( 7 )

[connection signal="pressed" from="pause/align/top_bottom/top/back" to="." method="pause_back"]
[connection signal="pressed" from="pause/align/top_bottom/top/invite" to="." method="pause_invite"]
[connection signal="pressed" from="pause/align/top_bottom/bottom/menu" to="." method="pause_menu"]
[connection signal="pressed" from="invite/align/top_bottom/back" to="." method="invite_cancel"]
